Avoid double scrollbars

--- a/common/src/main/webapp/sass/explore.scss
+++ b/common/src/main/webapp/sass/explore.scss
@@ -2141,11 +2141,9 @@ div.spectroscopy-table-emptymessage {
 
 .explore-single-tile-maximized.react-grid-layout {
   height: 100% !important; // !important overrides element attributes
-  width: 100% !important;
 
   .react-grid-item:first-child {
     height: 100% !important;
-    width: 100% !important;
   }
 }
 
